<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_faculty"
            android:title="@string/menu_faculty" />
        <item
            android:id="@+id/nav_course"
            android:title="@string/menu_course" />
        <item
            android:id="@+id/nav_group"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/nav_student"
            android:title="@string/menu_student" />
        <item
            android:id="@+id/nav_normative"
            android:title="@string/menu_normative" />
    </group>
</menu>