<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.physicaleducation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_faculty"
        android:name="com.example.physicaleducation.ui.faculty.FacultyFragment"
        android:label="@string/menu_faculty"
        tools:layout="@layout/fragment_faculty" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.example.physicaleducation.ui.course.CourseFragment"
        android:label="@string/menu_course"
        tools:layout="@layout/fragment_course" />

    <fragment
        android:id="@+id/nav_group"
        android:name="com.example.physicaleducation.ui.course.CourseFragment"
        android:label="@string/menu_group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.example.physicaleducation.ui.course.CourseFragment"
        android:label="@string/menu_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_normative"
        android:name="com.example.physicaleducation.ui.course.CourseFragment"
        android:label="@string/menu_normative"
        tools:layout="@layout/fragment_normative" />
</navigation>